--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.2"
+        "php": "^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
-        "pestphp/pest": "^0.2.2"
+        "pestphp/pest": "^1.21"
     },
     "autoload": {
         "psr-4": {
@@ -25,6 +25,11 @@
     "autoload-dev": {
         "psr-4": {
             "SlashEquip\\Attempt\\Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
         }
     }
 }
